<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".myprofile.MyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/Profile"
            android:background="@color/white"
            android:elevation="5dp"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/my_foto"
        app:shapeAppearanceOverlay="@style/circleImageView360dp" />

    <TextView
        style="@style/TextBlack.size16spBolt"
        android:layout_width="match_parent"
        android:ellipsize="end"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="@string/my_name" />

    <TextView
        style="@style/TextBlack.size16spBolt"
        android:layout_width="match_parent"
        android:ellipsize="end"
        android:layout_marginTop="6dp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textColor="@color/orangeFF6F00"
        android:text="@string/my_email" />
</LinearLayout>