<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backhround_radius_15dp_white"
    android:elevation="10dp"
    android:layout_margin="5dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_product"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/product_02_01"
            app:shapeAppearance="@style/CornerCut" />

        <ImageView
            android:layout_width="50sp"
            android:layout_height="60sp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_price_tag_price_svgrepo_com"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/categroryTv"
                style="@style/TextBlack.size14spBolt"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/brand_name" />

            <TextView
                android:id="@+id/productNameTV"
                style="@style/TextBlack.size12sp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/product_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ratingTV"
                    style="@style/TextContent.Small.Black"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:drawablePadding="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/dummyrating"
                    android:layout_alignParentBottom="true"
                    app:drawableStartCompat="@drawable/ic_baseline_star_24" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextBlack.size14spBolt"
                        android:layout_width="match_parent"
                        android:textAlignment="textEnd"
                        android:ellipsize="end"
                        android:text="@string/price" />

                    <TextView
                        android:id="@+id/priceTV"
                        style="@style/PriceText"
                        android:layout_width="match_parent"
                        android:textAlignment="textEnd"
                        android:layout_marginTop="5dp"
                        android:textSize="14dp"
                        android:ellipsize="end"
                        android:text="@string/xxxxxx" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>