<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".detileproduct.DetileProductActivity">

    <RelativeLayout
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:elevation="50dp"
        android:background="@drawable/background_radius_white_360">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />
    </RelativeLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_product"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/product_02_01"
                    app:shapeAppearance="@style/CornerCutBottom" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    app:srcCompat="@drawable/ic_price_tag_price_svgrepo_com"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:id="@+id/ratingTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/backhround_radius_15dp_white"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:paddingStart="10dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:textAppearance="@style/TextBlack.size16spBolt"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/ic_baseline_star_24"
                    tools:text="@string/dummyrating" />
            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:layout_toStartOf="@+id/layoutRigh"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/categroryTv"
                            style="@style/TextBlack.size16spBolt"
                            android:ellipsize="end"
                            android:text="@string/brand_name" />

                        <TextView
                            android:id="@+id/productNameTV"
                            style="@style/TextBlack.size14spBolt"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:text="@string/product_name"
                            android:textStyle="normal" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutRigh"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextBlack.size16spBolt"
                            android:layout_width="match_parent"
                            android:ellipsize="end"
                            android:text="@string/price"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:id="@+id/priceTV"
                            style="@style/PriceText"
                            android:layout_width="match_parent"
                            android:layout_marginTop="5dp"
                            android:ellipsize="end"
                            android:text="@string/xxxxxx"
                            android:textAlignment="textEnd"
                            android:textSize="20dp" />
                    </LinearLayout>

                </RelativeLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list_composition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layoutAnimation="@anim/layout_animation_item_left_to_right"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/activity_image_detile_adapter" />

                <TextView
                    style="@style/TextBlack.size14spBolt"
                    android:layout_marginTop="5dp"
                    android:text="@string/product_description" />

                <TextView
                    android:id="@+id/descriptionTV"
                    style="@style/TextBlack.size14spBolt"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:justificationMode="inter_word"
                    android:text="@string/content_text"
                    android:textStyle="normal"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    style="@style/TextBlack.size14spBolt"
                    android:layout_marginTop="15dp"
                    android:text="@string/size" />

                <TextView
                    android:id="@+id/sizeTV"
                    style="@style/TextBlack.size14spBolt"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:justificationMode="inter_word"
                    android:text="@string/xxxxxx"
                    android:textStyle="normal"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_Terms_and_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/backhround_radius_15dp_white_stroke1dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white">

                    <TextView
                        style="@style/TextBlack.size14spBolt"
                        android:layout_centerVertical="true"
                        android:text="@string/terms_and_conditions" />

                    <ImageView
                        android:id="@+id/imageArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/vector_arrow_buttom_red"
                        android:backgroundTint="@color/orangeFF6F00"
                        android:scaleX="1.2"
                        android:scaleY="1.2"
                        tools:ignore="ContentDescription" />
                </RelativeLayout>


                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable_terms_and_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="50dp"
                    app:el_duration="700"
                    app:el_expanded="false"
                    app:el_parallax="0.5">

                    <TextView
                        android:id="@+id/termAndConditionTv"
                        style="@style/TextBlack.size14spBolt"
                        android:layout_marginTop="5dp"
                        android:textStyle="normal" />


                </net.cachapa.expandablelayout.ExpandableLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/backhround_radius_15dp_white"
        android:backgroundTint="@color/blue_03b3ff"
        android:elevation="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textButton"
                style="@style/TextBlack.size20spWhiteBold"
                android:layout_gravity="center_vertical"
                android:text="@string/add_to_bag" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/ic_shop_bag"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>